feat(tests): migrate to JUnit 5